# voidshade

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
voidshade/: test.cpp  test.hpp
